fwknop-2.6.5 (12/16/2014):
    - [server] (Grant Pannell) Added a new access.conf variable "DESTINATION"
      to define the destination address for which an SPA packet will be
      accepted. The string "ANY" is also accepted if a valid SPA packet should
      be honored to any destination IP. Similarly to the "SOURCE" variable,
      networks should be specified in CIDR notation (e.g. "192.168.10.0/24"),
      and individual IP addresses can be specified as well. Also, multiple IP's
      and/or networks can be defined as a comma separated list (e.g.
      "192.168.10.0/24,10.1.1.123").
    - [server] Bug fix to ensure that proper bounds are enforced when
      importing digest cache files from previous fwknopd executions. This bug
      was discovered through fuzzing with American Fuzzy Lop (AFL) as driven
      by the test/afl/fuzzing-wrappers/server-digest-cache.sh wrapper.
      Previous to this fix, fwknopd could be made to crash through a malicious
      digest cache file (normally in /var/run/fwknop/digest.cache) upon
      initial import. This crash can only be triggered by a local user on the
      system where fwknopd is deployed and who has write permissions to the
      digest.cache file - usually only root has these permissions.

fwknop-2.6.4 (11/16/2014):
    - [server] Added a UDP server mode so that SPA packets can be acquired via
      UDP directly without having to use libpcap. This is an optional feature
      since it opens a UDP port (and therefore requires the local firewall be
      opened for communications to this port), but fwknopd is careful to never
      send anything back to a client that sends data to this port. So, from the
      perspective of an attacker or scanner, fwknopd remains invisible. This
      feature is enabled in fwknopd either with a new command line argument
      --udp-server or in the fwknopd.conf file with the ENABLE_UDP_SERVER
      variable. When deployed in this mode, it is advisable to recompile fwknop