@@ -1,3 +1,8 @@
+fwknop-2.6.6 (02//2015):
+    - [server] Bug fix when compiled with --enable-udp-server to not include
+      pcap.h, which is likely not installed whenever libpcap is also not
+      installed. This bug was reported by Alexander Kozhevnikov.
+
 fwknop-2.6.5 (12/16/2014):
     - [server] (Grant Pannell) Added a new access.conf variable "DESTINATION"
       to define the destination address for which an SPA packet will be
